--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@phosphor-icons/react": "^2.1.7",
     "daisyui": "^5.0.0",
     "next": "15.2.0",
     "react": "^19.0.0",
