--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@phosphor-icons/react": "^2.1.7",
+    "@supabase/supabase-js": "^2.90.1",
     "daisyui": "^5.0.0",
     "next": "^15.5.9",
     "react": "^19.0.0",
